--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ header .navbar .navbar-inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.8rem 0;
+  padding: 0.5rem 0;
   text-align: center;
 }
 
@@ -138,14 +138,16 @@ header .navbar .navbar-inner .right-side i {
 main .heading-banner {
   display: block;
   justify-content: space-between;
-  padding-bottom: 4rem;
   text-align: center;
   
 }
 main .heading-banner h2 {
   font-size:2rem;
   font-weight: 400;
+  display: inline-block;
   text-transform: uppercase;
+  text-align: left;
+  
 }
 main .heading-banner .fa-arrow-down {
   font-size: 9rem;
@@ -154,23 +156,113 @@ main .heading-banner .fa-arrow-down {
 main .heading-banner .heading-icon {
   align-self: flex-end;
 }
-
-@media only screen and (min-widith:445px) {
-
+main .content .content-grid__wrap {
+  display: block;
+  padding: 4rem 0;
+}
+main .content .content-grid__wrap .grid_column {
+  background-color: #ececec;
+  padding: 1rem;
+  display: block;
+  position: relative;
+}
+main .content .content-grid__wrap .content-grid__columns {
+  padding-bottom: 3rem;
+}
+main .content .content-grid__wrap .grid_column .content-grid__photo-box {
+  display: flex;
+  height: 100%;
+  
+}
+main .content .content-grid__wrap .grid_column .content-grid__text-box { 
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 1rem;
+}
+main .content .content-grid__wrap .grid_column .content-grid__text-box h4 {
+  font-weight: 400;
 }
 
+main .content .content-grid__wrap .content-grid__button button {
+  all: unset;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #2374e8;
+  width: 100%;
+  padding: 1rem;
+  color: #fff;
+  text-align: center;
+  margin: auto;
+  cursor: pointer;
+}
+
+main .content .content-grid__wrap .content-grid__button i {
+  transform: rotate(-33deg);
+  font-size: 1.6rem;
+}
+main .content .heading_title {
+  text-align: center;
+  margin: auto;
+}
+main .content .heading_title h2 {
+  font-size: 2rem;
+  text-align: left;
+  display: inline-block;
+}
 @media only screen and (min-width: 768px) {
   main .heading-banner {
     display: block;
   }
-
+  
 }
 @media only screen and (min-width: 992px) {
-  main .heading-banner h2 {
-    font-size:6rem;
-    line-height: 7rem;
+  main .content .heading_title h2 {
+    font-size: 4rem;
   }
+  
   main .heading-banner {
     display: flex;
   }
+  main .heading-banner h2 {
+    font-size: 6rem;
+    line-height: 7rem;
+    margin-right: 6rem;
+  }
+  
+  main .content .content-grid__wrap.publicition .grid_column {
+    flex-direction: column;
+    justify-content: space-between;
+    height: 25rem;
+  }
+  main .content .content-grid__wrap .content-grid__columns{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+  }
+  main .content .content-grid__wrap .grid_column {
+    display: flex;
+    gap: 2rem;
+  }
+  main .content .content-grid__wrap .content-grid__button { 
+    text-align: center;
+  }
+  main .content .content-grid__wrap .content-grid__button button {
+    background-color: #2374e8;
+    width: 200px;
+    padding: 1rem;
+    color: #fff;
+    
+  }
+  main .content .content-grid__wrap .grid_column .content-grid__photo-box {
+    width: 50%;
+  }
+  main .content .content-grid__wrap .grid_column .content-grid__text-box {
+    display: flex;
+    
+  }
+  main .content .content-grid__wrap .grid_column .content-grid__text-box h4{
+    font-size: 1.4rem;
+  }
+  
 }
