--- a/css/main.css
+++ b/css/main.css
@@ -156,7 +156,7 @@ main .heading-banner__subheading-left em {
   line-height: 1.5rem;
 }
 main .heading-banner h2 {
-  font-size:3rem;
+  font-size:3.5rem;
   font-weight: 500;
   display: inline-block;
   text-transform: uppercase;
@@ -233,7 +233,9 @@ main .content .content-grid__wrap .content-grid__button button {
   font-size: 1.2rem;
   
 }
-
+main .content .content-grid__wrap .content-grid__button button:hover {
+  background-color: #124996;
+}
 .content-grid__button i {
   transform: rotate(-33deg);
   font-size: 1.6rem;
@@ -241,6 +243,7 @@ main .content .content-grid__wrap .content-grid__button button {
 main .content .heading_title {
   text-align: center;
   margin: auto;
+
 }
 main .content .heading_title h2 {
   font-size: 2rem;
@@ -363,7 +366,7 @@ footer {
   main .heading-banner h2 {
     font-size: 6rem;
     line-height: 7rem;
-    margin-right: 6rem;
+    margin-right: 11rem;
   }
   
   
@@ -417,7 +420,7 @@ footer {
   header .navbar .mobile-menu.open {
     display: none;
   }
-  
+
 }
 
 @media only screen and (min-width: 1200px) {
